[gd_scene load_steps=9 format=3 uid="uid://bpp2yno1b40mt"]

[ext_resource type="Script" path="res://menus/UI.gd" id="1_4yscg"]
[ext_resource type="Texture2D" uid="uid://cfj4mef1krbl0" path="res://menus/bars/timer_top.png" id="2_716hd"]
[ext_resource type="Texture2D" uid="uid://bcyybgmun2kji" path="res://entities/player/health_temp/000.png" id="2_lrfa3"]
[ext_resource type="Texture2D" uid="uid://dyruq4j5gjxvp" path="res://menus/bar.png" id="3_3mxl1"]
[ext_resource type="Texture2D" uid="uid://cvqc0o54la8kc" path="res://menus/bars/timer_over.png" id="3_nyejh"]
[ext_resource type="Texture2D" uid="uid://ce78d1aoo1vvc" path="res://menus/bars/timer_under.png" id="3_vwys6"]
[ext_resource type="Texture2D" uid="uid://cdndbnysjpcy0" path="res://menus/bars/timer_bottom.png" id="4_7xpkh"]
[ext_resource type="Texture2D" uid="uid://lbwsx0krlvxw" path="res://menus/cirlce.png" id="4_flg3n"]

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_4yscg")

[node name="DayCounterUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_right = 51.0
offset_bottom = 40.0

[node name="DayCounterLabel" type="Label" parent="DayCounterUI"]
layout_mode = 0
offset_left = 950.0
offset_top = 8.0
offset_right = 1137.0
offset_bottom = 31.0
text = "Days left until attack: 100"

[node name="DayCounterBar" type="ProgressBar" parent="DayCounterUI"]
visible = false
layout_mode = 0
offset_left = 841.0
offset_top = 22.0
offset_right = 1143.0
offset_bottom = 46.0
max_value = 70.0
value = 70.0
show_percentage = false

[node name="TimerTop" type="TextureProgressBar" parent="DayCounterUI"]
layout_mode = 0
offset_left = 948.0
offset_top = 31.0
offset_right = 1148.0
offset_bottom = 231.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("2_716hd")
tint_progress = Color(0.811765, 0.811765, 0.811765, 1)

[node name="TimerBottom" type="TextureProgressBar" parent="DayCounterUI/TimerTop"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
fill_mode = 3
texture_under = ExtResource("3_vwys6")
texture_over = ExtResource("3_nyejh")
texture_progress = ExtResource("4_7xpkh")
tint_under = Color(0.811765, 0.811765, 0.811765, 1)
tint_progress = Color(0.811765, 0.811765, 0.811765, 1)

[node name="InLevelUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ArmourHealthBarOLD" type="ProgressBar" parent="InLevelUI"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 23.0
offset_right = 404.0
offset_bottom = 68.0
value = 100.0
show_percentage = false

[node name="ArmourHealthLabel" type="Label" parent="InLevelUI/ArmourHealthBarOLD"]
layout_mode = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 210.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 30
text = "Armour: 100%
"

[node name="UnprotectedHitsLabel" type="Label" parent="InLevelUI"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_top = 71.0
offset_right = 350.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 25
text = "Unprotected hits taken:"

[node name="Face" type="TextureRect" parent="InLevelUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 330.0
offset_bottom = 371.0
scale = Vector2(0.44, 0.44)
texture = ExtResource("2_lrfa3")

[node name="ArmourHealthBar" type="TextureProgressBar" parent="InLevelUI"]
layout_mode = 0
offset_left = 112.0
offset_top = 7.0
offset_right = 407.0
offset_bottom = 47.0
value = 100.0
texture_under = ExtResource("3_3mxl1")
texture_progress = ExtResource("3_3mxl1")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.592157, 0.537255, 0.32549, 1)

[node name="PlayerHealthBar" type="TextureProgressBar" parent="InLevelUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 220.0
offset_bottom = 228.0
value = 100.0
fill_mode = 4
texture_under = ExtResource("4_flg3n")
texture_progress = ExtResource("4_flg3n")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.258824, 0.4, 0.290196, 1)
radial_initial_angle = 90.0
radial_fill_degrees = 271.0

[node name="SoulUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 62.0
offset_top = -6.0
offset_right = 102.0
offset_bottom = 34.0

[node name="SoulBar" type="ProgressBar" parent="SoulUI"]
layout_mode = 0
offset_left = 419.0
offset_top = 23.0
offset_right = 816.0
offset_bottom = 47.0
value = 90.0
show_percentage = false

[node name="SoulLabel" type="Label" parent="SoulUI/SoulBar"]
layout_mode = 0
offset_left = 180.0
offset_right = 252.0
offset_bottom = 23.0
text = "soul"
